; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_is_xml_metadata.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_is_xml_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Type = common dso_local global i32 0, align 4
@Metadata = common dso_local global i32 0, align 4
@Subtype = common dso_local global i32 0, align 4
@XML = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @is_xml_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_xml_metadata(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @Type, align 4
  %10 = call i32 @PDF_NAME(i32 %9)
  %11 = call i32 @pdf_dict_get(i32* %7, i32* %8, i32 %10)
  %12 = load i32, i32* @Metadata, align 4
  %13 = call i32 @PDF_NAME(i32 %12)
  %14 = call i64 @pdf_name_eq(i32* %6, i32 %11, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %29

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @Subtype, align 4
  %21 = call i32 @PDF_NAME(i32 %20)
  %22 = call i32 @pdf_dict_get(i32* %18, i32* %19, i32 %21)
  %23 = load i32, i32* @XML, align 4
  %24 = call i32 @PDF_NAME(i32 %23)
  %25 = call i64 @pdf_name_eq(i32* %17, i32 %22, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %30

28:                                               ; preds = %16
  br label %29

29:                                               ; preds = %28, %2
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %27
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @pdf_name_eq(i32*, i32, i32) #1

declare dso_local i32 @pdf_dict_get(i32*, i32*, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
